--- a/Stock/Main.ipynb
+++ b/Stock/Main.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "name = \"AAPL\"\n",
     "\n",
-    "TOKEN = \"1718794376:AAEcGyO2aHcMdjPy6Rbz4HbZdMFJpowPHwc\"\n",
+    "TOKEN = \"#Your Telegram Bot Token Here\"\n",
     "bot = telebot.TeleBot(TOKEN)\n",
     "savedStock = None\n",
     "\n",
